[package]
name = "toolit-api"
version = "0.1.0"
authors = ["user <user@user.user>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.1.0", features = ["rt-multi-thread", "macros", "time"] }
warp = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde-xml-rs = "0.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.5"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.7.3"
rust-argon2 = "0.8"
jsonwebtoken = "^7"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
bitflags = "1.2.1"
rust_decimal = {version = "1.8.1", features = ["serde-float"]}
base64 = "0.12.3"
sendgrid = { version = "0.16.0", features = ["async"] }
sha2 = "0.9.2"
hmac = "0.10.1"
url = "2.2.0"
# Depending on git repos for now since the azure-sdk-for-rust crate is slow to update and depends on 0.1 futures while everything else depends on 0.3 futures
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust/", rev = "94a716fbaeaca1ab04f088840078b29528d03a83" }
azure_cosmos = { git = "https://github.com/Azure/azure-sdk-for-rust/", rev = "94a716fbaeaca1ab04f088840078b29528d03a83" }
azure_storage = { git = "https://github.com/Azure/azure-sdk-for-rust/", features = ["blob"], rev = "94a716fbaeaca1ab04f088840078b29528d03a83"}
orion = "0.15.5"
lazy_static = "1.4.0"
md5 = "0.7.0"
geojson = "0.22.0"
bankid = { path = "src/bankid" }
swish = { path = "src/swish" }
erased-serde = "0.3.13"
appinsights = "0.1.5"
cosmos-utils = { path = "src/cosmos_api" }
