[package]
name = "bankid"
version = "0.1.0"
authors = ["user <user@user.user>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.2", features = ["native-tls", "json"]}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
tokio = { version = "1.4.0", features = ["time", "fs"] }
