[package]
name = "swish"
version = "0.1.0"
authors = ["user <user@user.user>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = {version = "1.8.1", features = ["serde"]}
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.3", features = ["native-tls", "json"] }
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
tokio = { version = "1.4.0", features = ["fs"] }
openssl = "0.10.34"
base64 = "0.13.0"
